[ Login y registro ] » Contenido actualizado

--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -61,6 +61,7 @@
     <li>El local storage es un tipo de almacenamiento web que permite a aplicaciones de JS almacenar datos en el navegador web sin fecha de expiración</li>
     <li>Esto implica que los datos seguirán almacenados incluso si el usuario cierra el navegador web</li>
     <li>Para acceder al local storage desde nuestro navegador web, abrimos el inspector, hacemos clic en la pestaña <i>Application</i> y luego en <i>Local Storage</i></li>
+    <li>Lógicamente, si utilizamos un dispositivo distinto, no tendremos accesos a los datos del local storage del otro dispositivo</li>
   </ul>
 
   <!-- ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
