--- a/src/app/componentes/login-registro/login-registro.component.html
+++ b/src/app/componentes/login-registro/login-registro.component.html
@@ -118,8 +118,11 @@
 
         <li>En este método, además, almacenamos en el local storage la fecha de expiración, tal que pasado ese tiempo se debe borrar el token de seguridad y se fuerza el cierre de sesión del usuario</li>
         <li>Firebase no nos devuelve la fecha de expiración per se, sino la duración de la sesión en segundos (normalmente de una hora, lo que equivale a unso 3600 segundos)</li>
+        <li>Podemos ir más lejos y sumarle el valor que almacena el campo <i>expiresIn</i> del objeto devuelto por Firebase tras el login, pero como desde siempre ha sido de una hora, no es necesario</li>
         <li>Debemos sumar (mediante el método <b>setTime()</b>) este intervalo de tiempo a la fecha actual para obtener así la fecha en la que el token de seguridad expirará</li>
         <li>Ojo, esta suma se puede realizar porque la fecha se pasa a un formato numérico expresado en segundos que no es fácilmente entendible por un ser humano, pero sí para un dispositivo</li>
+        <li>Este formato numérico queda almacenado en el local storage para futuras validaciones, lo que permite al usuario modificar su valor en el local storage</li>
+        <li>Es conveniente verirficar desde el backend que la fecha de expiracion corresponde con la que envia el usuario cuando comprueba si se ha caducado, para evitar así las consecuencias de un posible hackeo</li>
         
         <img src="assets/img/login-y-registro/figura2-4.png" alt="">
         <caption><strong>Figura 2.4.</strong> Petición HTTP de tipo POST para el registro sin login automático</caption>
@@ -302,7 +305,9 @@
         <li>Efectivamente, el fichero que crea Angular CLI tiene la misma pinta que la de un servicio (fíjate en el decorador), como se observa en la figura 6.1</li>
         <li>Ojo, el guardián creado por Angular CLI no es exactamente igual que el de esta figura, dado que este ha sido modificado en base a nuestras necesidades</li>
         <li>Importamos el servicio y la clase <b>Router</b> y los inyectamos en el constructor</li>
-        <li>Utilizaremos el primero para detectar si el usuario se ha logueado para una ruta en cuestión y el segundo para redirigir accesos indeseados a la página del login (o a la que tú quieras)</li>
+        <li>Utilizaremos el primero para detectar si el usuario se ha logueado para una ruta en cuestión y el segundo para redirigir accesos indeseados a la página del login</li>
+        <li>No es obligatorio redirigir a la página del login, hubiéramos podido haberlo hecho para una página de error 404 personalizada o cualquier otra cosa que nos parezca oportuna</li>
+        <li>Nótese que tras la redirección igualmente se devuelve <b>false</b> (es obligatorio)</li>
 
         <img src="assets/img/login-y-registro/figura6-2.png" alt="">
         <caption><strong>Figura 6.2.</strong> Verificación de la bondad de un acceso</caption>
