[ Componente 'inicio' ] » Explicación de cómo ejecutar más de un proyecto mejorada

--- a/src/app/componentes/inicio/inicio.component.html
+++ b/src/app/componentes/inicio/inicio.component.html
@@ -48,8 +48,14 @@
     <li>Desde el directorio de nuestro proyecto, ejecutamos el comando <b>$ ng serve</b></li>
     <li>Tras esto, aparecerá por consola la URL que tendremos que pegar en el navegador web para ejecutar nuestro proyecto</li>
     <li>Para que se abra directamente una pestaña del navegador web con el proyecto en marcha, ejecutamos el comando <b>$ ng serve -o</b></li>
-    <li>Si deseamos ejecutar más de un proyecto de Angular, tenemos que especificar un puerto dentro del comando de la forma <b>$ ng serve --port _Puerto_</b></li>
     <li>Por defecto, Angular trabaja con el puerto <i>4200</i>, pero podemos utilizar cualquier otro, como el <i>8080</i></li>
+  </ul>
+
+  <h4>3.3 Ejecutar más de un proyecto</h4>
+
+  <ul>
+    <li>Si ejecutamos más de un proyecto debemos especificar un puerto distinto para que no coincida con el de los demás proyectos en ejecución</li>
+    <li>Desde el directorio de nuestro proyecto, ejecutamos el comando <b>$ ng serve --port _Puerto_</b> o <b>$ ng serve -o --port _Puerto_</b></li>
   </ul>
 
   <!-- ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── -->
